--- a/package.json
+++ b/package.json
@@ -8,12 +8,30 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
+    "@stripe/stripe-js": "^2.1.11",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/auth-ui-react": "^0.4.6",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.38.4",
     "autoprefixer": "10.4.16",
+    "debounce": "^2.0.0",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.29.4",
     "next": "14.0.3",
     "postcss": "8.4.31",
+    "prisma": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.3",
+    "stripe": "^14.5.0",
     "tailwindcss": "3.3.5"
   }
 }
