--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.688.0",
+    "@aws-sdk/s3-request-presigner": "^3.688.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/base": "^5.0.0-beta.61",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
     "@prisma/client": "^5.6.0",
     "@stripe/stripe-js": "^2.1.11",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
@@ -21,7 +28,10 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.38.4",
     "autoprefixer": "10.4.16",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.7",
     "debounce": "^2.0.0",
+    "fs": "^0.0.1-security",
     "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "next": "14.0.3",
@@ -29,6 +39,7 @@
     "prisma": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
